--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,11 @@
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css'>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+  <script src="https://kit.fontawesome.com/c0809f0a76.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="">
   <app-root></app-root>
 </body>
 <script src="https://kit.fontawesome.com/c0809f0a76.js" crossorigin="anonymous"></script>
